syntax = "proto3";

package chef.automate.domain.infra_proxy.migrations.response;
option go_package = "github.com/chef/automate/api/interservice/infra_proxy/migrations/response";

message UploadFileResponse{
  //Chef infra server migration id
  string migrationId =1;
}
